		User Admin: added student ID to search in Manage Users
		User Admin: added birth certificate scan field in Manage Users
		User Admin: hide inactive modules under Manage Permissions
		User Admin: fixed bug preventing User Custom Field options from appearing when adding a new field
		User Admin: fixed PHP Notice in Import User Photos

	Deprecated
		Planner: replaced original planner-based attendance with attendance by class

v12.0.00
--------
	Headlines
		New markbook configuration to allow weighting and total score calculation for all suitable columns in class
		New interface for defining interface string substitutions, along for custom language tweaks
		PHP 7 compatible
		Dashboards, with hooks, for staff and students
		New workflows for advertising job openings, accepting and processing applications
		Complete Dutch translation ("dank je" to Vic Mortelmans and Kris Clauw)

	Changes With Important Notices
		System: initial phase of object oriented PHP rewrite: expect errors during upload of the update.
		Students: moved student application form from its own module into Students
		Students: moved application form management from User Admin to Students module
		Students: moved student enrolment from User Admin to Students module
		Students: moved medical form management from User Admin to Students module

	Significant Changes
		System: replaced float with version_compare, fixing cases where minor (system and module) updates could not be installed.
		System: improved return message handling
		System: link to Edit shown to user after new record is added
		System: beautified code base to align more closely with standard PHP syntax
		Activities: added ability to digitally mark and export activity attendance
		Formal Assessment: added import functionality for internal assessments
		Individual Needs: new interface for parents to view individual education plans for their children (off by default)